--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
         <p>Number of attempts: <asside class="remainingGuess"></asside></p>
       </div>
     </main>
-    <script src="./index.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
