--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <input class="btn" id="guessc" type="submit" value="Check" />
       </div>
       <div class="output">
-        <img src="../images/Magic-Hat-Download-PNG.png" alt="" />
+        <img src="./images/Magic-Hat-Download-PNG.png" alt="" />
         <h2>Write the Number</h2>
         <p>Number of attempts: <asside class="remainingGuess"></asside></p>
       </div>
