--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>Guess The Number ( 1 - 100 )</h1>
       <p>Guess a number between 1 and 100</p>
       <div class="form">
-        <input type="number" min="0" max="100" maxlength="3" name="guess" id="guess" />
+        <input type="number" min="0" max="100" name="guess" id="guess" />
         <input class="btn" id="guessc" type="submit" value="Check" />
       </div>
       <div class="output">
